--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
         <p>
             Ordered List :
             <ol>
-                <li>Lewis Capaldi</li>
-                <li>Taylor Swift </li>
+                <li>Pemrograman Web</li>
+                <li>Kakulus</li>
             </ol>
         </p>
 
         <p>
             Unordered List :
             <ul>
-                <li>Olivia Rodrigo</li>
-                <li>Marshmello</li>
+                <li>Kecerdasan Buatan</li>
+                <li>Embedded System</li>
             </ul>
         </p>
     </body>
